EVEREST-1799 add OIDC scope to settings API
