# docs/spec/openapi.yml
@@ -2136,9 +2136,13 @@ components:
         issuerURL:
           type: string
           description: OIDC provider url
+        scope:
+          type: string
+          description: OIDC requested scopes
       required:
         - clientId
         - issuerURL
+        - scope
     DatabaseClusterList:
       description: DatabaseClusterList is an object that contains the list of the existing database clusters.
       properties:
