# internal/server/handlers/k8s/kubernetes.go
@@ -82,6 +82,7 @@ func (h *k8sHandler) GetSettings(ctx context.Context) (*api.Settings, error) {
 		OidcConfig: api.OIDCConfig{
 			ClientId:  config.ClientID,
 			IssuerURL: config.IssuerURL,
+			Scope:     config.Scope,
 		},
 	}, nil
 }
